# IS469-research

./: .gitignore  README.md  langchain_chroma-1.1.0-py3-none-any.whl  pyproject.toml  requirements.txt  uv.toml
agentic/: orchestrator.py
docs/: bm25_explanation.md
evals/: evaluate.py  financebench_runner.py  financebench_sample.json  generate_testset.py  llm_as_judge.py
evaluation/: evaluate.py  generate_testset.py  testset.json
retrieval/: ARCHITECTURE.md  README.md  __init__.py  bm25.py  examples_agentic_hyde.py  examples_fixed_chroma.py  examples_semantic_hybrid.py  traditional-rag.py
retrieval/utils/: env.py  (+3 more)
scrape/: hugging-face.py
texts/: 0000077476-22-000010.md  0000077476-23-000007.md  0000077476-23-000028.md  0000718877-20-000003 (1).md  0000718877-20-000003.md  0000936468-21-000013.md  0000936468-22-000008.md  0000950170-23-035122.md  0001104659-23-066134.md  0001193125-16-662209.md  0001539497-22-001037.md  0001539497-22-001461.md  05cb5ac5483d_Annual_report__Section_13_and_15_d___not_S-K_Item_405_.md  060eca749bca_eb24002c-e050-45eb-806a-15264d59131c.md  070b34b2679e_1862b88f-4e6b-4251-be45-4833fc0a0126.md  0844b79bd4a6_0001558370-23-004581.md  12269d5da738_0000066740-23-000058.md  1265ff05c06c_2023-03-09_Ulta_Beauty_Announces_Fourth_Quarter_Fiscal_2022_164.md  160d86c278e9_0000021344-18-000008.md  1ee6e4b8633a_c93682a4-8b3c-4251-a2ed-97c4e474a214.md  24eb3a62e482_a7d1c855-4d22-48e4-9d17-b5f5af923dbe.md  27a8fbae860c_76b92d86-75b3-4fa9-a754-e83395d63a46.md  2d1c7dbb22dc_17bef9d1-6ef1-4a53-beb8-9c12b07a4a0e.md  30497028ad45_0000066740-23-000014.md  (+50 more)
(+45 files in other folders)
